--- a/multilinevaluechange1.yml
+++ b/multilinevaluechange1.yml
@@ -1,16 +1,16 @@
 ---
 - name: Update multiple lines in a config file
   hosts: all
-  become: yes
+  become: false
   tasks:
-    - name: Change config setting1
+    - name: Change parameter setting1
       ansible.builtin.replace:
-        path: /<config_complete_dir>/config.cfg
-        regexp: '^config_param1=.*'
-        replace: 'config_param1=config_param1_newval1'
+        path: /<config_actual_path>/config.properties
+        regexp: '^param1=.*'
+        replace: 'param1=param1_newval'
 
-    - name: Change config setting2
+    - name: Change parameter setting2
       ansible.builtin.replace:
-        path: /<config_complete_dir>/config.cfg
-        regexp: '^config_param2=.*'
-        replace: 'config_param1=config_param1_newval2'
+        path: /<config_actual_path>/config.properties
+        regexp: '^param2=.*'
+        replace: 'param2=param2_newval'
